feat: add gcs_filter protocol

--- a/store/Cargo.toml
+++ b/store/Cargo.toml
@@ -14,3 +14,5 @@ lru-cache = { git = "https://github.com/nervosnetwork/lru-cache", rev = "a35fdb8
 ckb-script-data-loader = { path = "../script/data-loader" }
 ckb-util = { path = "../util" }
 ckb-error = { path = "../error" }
+
+golomb-coded-set = { git = "https://github.com/TheWaWaR/golomb-coded-set"}
