--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -18,6 +18,8 @@ bitflags = "1.0"
 ckb-verification = { path = "../verification" }
 ckb-chain-spec = { path = "../spec" }
 ckb-traits = { path = "../traits" }
+ckb-notify = { path = "../notify" }
+ckb-hash = { path = "../util/hash" }
 failure = "0.1.5"
 lru-cache = { git = "https://github.com/nervosnetwork/lru-cache", rev = "a35fdb8" }
 sentry = "0.16.0"
