--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -35,6 +35,7 @@ failure = "0.1.5"
 serde_json = "1.0"
 lazy_static = "1.4.0"
 byteorder = "1.3.1"
+golomb-coded-set = { git = "https://github.com/TheWaWaR/golomb-coded-set"}
 
 # Prevent this from interfering with workspaces
 [workspace]
