--- a/util/memory-tracker/Cargo.toml
+++ b/util/memory-tracker/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 
 [dependencies]
 ckb-logger = { path = "../logger" }
-ckb-shared = { path = "../../shared" }
+rocksdb = { package = "ckb-rocksdb", version = "=0.12.3", features = ["snappy"] }
 serde = { version = "1.0", features = ["derive"] }
 
 # TODO Why don't disable this crate by "target.*" in the crates which are dependent on this crate?
